# yt-whisper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-diarize.txt  requirements.txt
docs/superpowers/plans/: 2026-04-04-yt-whisper.md  2026-04-08-diarization-tui-autodetect.md
docs/superpowers/specs/: 2026-04-04-yt-whisper-design.md  2026-04-08-diarization-tui-autodetect-design.md
tests/: test_cli.py  test_diarizer.py  test_downloader.py  test_formatter.py  test_history.py  test_profile_detect.py  test_prompts.py  test_runner.py  test_transcriber.py  test_tui_smoke.py
yt_whisper/: __init__.py  __main__.py  cli.py  cuda_preload.py  diarizer.py  downloader.py  formatter.py  profile_detect.py  prompts.py  runner.py  transcriber.py
yt_whisper/tui/: app.py  history.py  listener.py
