[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-whisper"
version = "0.1.0"
description = "Transcribe YouTube videos using faster-whisper or YouTube subtitles, with optional speaker diarization and a Textual TUI."
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.01.01",
    "faster-whisper>=1.0.0",
    "nvidia-cublas-cu12>=12.0,<13",
    "nvidia-cudnn-cu12>=9.0,<10",
    "textual>=0.80",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
diarize = ["pyannote.audio>=3.1", "torchaudio"]
dev = ["pytest", "pytest-asyncio>=0.23"]

[project.scripts]
yt-whisper = "yt_whisper.cli:main"

[tool.setuptools.packages.find]
include = ["yt_whisper*"]
exclude = ["tests*", "docs*"]
